# TraceAndPace

./: CMakeLists.txt  README.md  package-lock.json
backend/: .gitignore  AVLTree.hpp  BTree.hpp  BaseTree.hpp  InceptaTree.hpp  SplayTree.hpp  TreeManager.hpp  main.cpp  main.js  main.wasm
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  BulkInput.tsx  Node.tsx  TreeStructure.tsx  Visualization.tsx  main.tsx  treestructure.ts
frontend/src/assets/: .keep
frontend/src/wasm/: TraceAndPace.d.mts  TraceAndPace.mjs  TraceAndPace.wasm
